--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prismfly - Front End Developer Coding Challenge</title>
   <link rel="stylesheet" href="css/index.css">
-  <script type="text/javascript" src="js/index.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="js/index.js"></script>
+
   <link rel="stylesheet" href="https://use.typekit.net/abd0ulq.css">
   <link rel="stylesheet" href="https://use.typekit.net/mcy6kmg.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -41,11 +47,6 @@
     </div>
   </article>
 </section>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  
 
-
-  
 </body>
 </html>
